# repo

./: .gitignore  CMakeLists.txt  OutfitAdvisor.cpp  OutfitAdvisor.hpp  README.md  WeatherAnalyzer.cpp  WeatherAnalyzer.hpp  main.cpp  weather_bot.sln  weather_bot.vcxproj
include/: NotificationManager.h  WeatherBot.h  WeatherService.h
src/: NotificationManager.cpp  WeatherBot.cpp  WeatherService.cpp  main.cpp
weather_bot/x64/Debug/: weather_bot.exe.recipe
weather_bot/x64/Debug/weather_bot.tlog/: weather_bot.lastbuildstate
